src/webmin/csf/images/configserver.css
/* ... */
.footer .footer-left button.btn-blocklist:hover
{
	background-color: var( --panel-footer-left-ico-bg-h );
}

/*
	Footer › Right
*/

.footer .footer-right
{
    display: flex;
	gap: 6px;
}

/*
	Footer › Right › Standard Button
*/

.footer .footer-right button,
.footer .footer-right a.btn-footer
{
	padding: 7px 9px;
	border: none;
	border-radius: 4px;
	text-decoration: none;
	font-size: 14px;
	cursor: pointer;
}

/*
	Footer › Button › Theme Switcher
*/

.footer .footer-right button.btn-theme
{
    background-color: var( --btn-1-bg-n );
    border-color: var( --btn-1-bg-n );
    color: white;
    min-width: auto;
}

/*
	Footer › Button › Github
*/

.footer .footer-right button.btn-github
{
    background-color: var( --btn-1-bg-n );
    border-color: var( --btn-1-bg-n );
    color: white;
    min-width: auto;
}

/*
	Footer › Button › Hover (All)
*/

.footer button.btn-footer:hover
{
	filter: brightness(120%) !important;
	transition: all 0.2s;
}

/*
	Button › Update
*/

button.btn-update
{
    display: inline-flex;
    align-items: center;
    gap: 10px;
    background-color: #44662d;
    font-size: 11pt;
    font-weight: 100;
    padding: 5pt;
    border: 1px solid #000;
    border-radius: 6px;
}

/*
	Footer › Button › Logout
*/

.footer-right button.btn-logout
{
    background-color: #fd0966;
    border-color: #fd0966;
    color: white;
	min-width: auto;
}

/*
	Footer › Right › Group
*/

.footer .footer-right .btn-footer
{
	min-width: 5px !important;
}

/*
	Footer › Buttons › All
*/

.footer .footer-right button
{
    width: 30px;
    height: 28px;
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 0;
    border-radius: 4px;
    cursor: pointer;
}


.footer .footer-right button svg
{
    width: 13px;
    height: 14px;
    display: block;
    fill: currentColor;
}

.footer .copyright code
{
	background-color: var( --codeblock-background );
	color: var( --codeblock-text );
}

/*
	ACE Editor  › Primary
*/

.ace-tomorrow
{
	background-color: var(--ace-bg);
	color: var(--ace-text);
}

.ace-tomorrow .ace_cursor
{
	color: var(--ace-cursor);
}

.ace-tomorrow .ace_print-margin
{
	background: var(--ace-print-margin);
}

.ace-tomorrow .ace_scroller
{
	/* box-shadow: inset 2px 2px 20px var( --ace-scrollbar-shadow ); */
}

/*
	ACE Editor  › Gutter
*/

.ace-tomorrow .ace_gutter
{
	background: var(--ace-gutter-bg);
	color: var(--ace-gutter-text);
}

.ace-tomorrow .ace_gutter-active-line
{
	background: var(--ace-gutter-active-line-bg);
}

/*
	ACE Editor  › Selection & Markers
*/

.ace-tomorrow .ace_marker-layer .ace_selection
{
	background: var(--ace-selection-bg);
}

.ace-tomorrow.ace_multiselect .ace_selection.ace_start
{
	box-shadow: 0 0 3px 0px var(--ace-bg);
}

.ace-tomorrow .ace_marker-layer .ace_active-line
{
	background: var(--ace-active-line-bg);
}

.ace-tomorrow .ace_marker-layer .ace_step
{
	background: rgb(102, 82, 0);
}

.ace-tomorrow .ace_marker-layer .ace_bracket
{
	border: 1px solid var(--ace-bracket-border);
}

.ace-tomorrow .ace_marker-layer .ace_selected-word
{
	border: 1px solid var(--ace-selected-word-border);
}

/*
	ACE Editor  › Comments
*/

.ace-tomorrow .ace_comment
{
	color: var(--ace-comment);
}

/*
	ACE Editor  › Keywords & operators
*/

.ace-tomorrow .ace_keyword,
.ace-tomorrow .ace_meta,
.ace-tomorrow .ace_storage,
.ace-tomorrow .ace_storage.ace_type,
.ace-tomorrow .ace_support.ace_type
{
	color: var(--ace-keyword);
}

.ace-tomorrow .ace_keyword.ace_operator
{
	color: var(--ace-operator);
}

/*
	ACE Editor  › Numbers & constants
*/

.ace-tomorrow .ace_constant.ace_character,
.ace-tomorrow .ace_constant.ace_language,
.ace-tomorrow .ace_constant.ace_numeric,
.ace-tomorrow .ace_keyword.ace_other.ace_unit,
.ace-tomorrow .ace_support.ace_constant,
.ace-tomorrow .ace_variable.ace_parameter
{
	color: var(--ace-number);
}

.ace-tomorrow .ace_constant.ace_other
{
	color: var(--ace-constant);
}

/*
	ACE Editor  › Variables & functions
*/

.ace-tomorrow .ace_variable
{
	color: var(--ace-variable);
}

.ace-tomorrow .ace_entity.ace_name.ace_function,
.ace-tomorrow .ace_support.ace_function,
.ace-tomorrow .ace_task.ace_actions,
.ace-tomorrow .ace_task.ace_modules
{
	color: var(--ace-function);
}

.ace_entity.ace_name.ace_function,
.ace_support.ace_function
{
	color: var(--ace-function);
}

/*
	ACE Editor  › Classes & types
*/

.ace-tomorrow .ace_support.ace_class,
.ace-tomorrow .ace_support.ace_type
{
	color: var(--ace-class);
}

/*
	ACE Editor  › Strings & markup
*/

.ace-tomorrow .ace_string,
.ace-tomorrow .ace_heading,
.ace-tomorrow .ace_markup.ace_heading
{
	color: var(--ace-string);
}

.ace-tomorrow .ace_entity.ace_name.ace_tag,
.ace-tomorrow .ace_entity.ace_other.ace_attribute-name,
.ace-tomorrow .ace_meta.ace_tag,
.ace-tomorrow .ace_string.ace_regexp
{
	color: var(--ace-tag);
}

/*
	ACE Editor  › Errors & warnings
*/

.ace-tomorrow .ace_invalid
{
	color: var(--ace-invalid-text);
	background-color: var(--ace-invalid-bg);
}

.ace-tomorrow .ace_invalid.ace_deprecated
{
	background-color: var(--ace-deprecated-bg);
}

/*
	ACE Editor  › Folding & invisibles
*/

.ace-tomorrow .ace_fold
{
	background-color: var(--ace-fold-bg);
	border-color: var(--ace-fold-border);
}

.ace-tomorrow .ace_invisible
{
	color: var(--ace-invisible);
}

/*
	ACE Editor › Indent guides
*/

.ace-tomorrow .ace_indent-guide
{
	background: var(--ace-indent-guide) right repeat-y;
}

.ace-tomorrow .ace_indent-guide-active
{
	background: var(--ace-indent-guide-active) right repeat-y;
}

/*
	Tags
*/

.tag-location
{
	font-size: 0.80em;
}

.tag-pill
{
	display: inline-block;
	padding: 1px 5px;
	border-radius: 6px;
	font-weight: 700;
	min-width: 60px;
	text-align: center;
	margin: 3px 1px;
	vertical-align: middle;
	font-size: 0.80em;
}

.tag-pill-red
{
	background-color: var( --tag-pill-red-bg );
	color: var( --tag-pill-red-text );
}

.tag-pill-yellow
{
	background-color: var( --tag-pill-yellow-bg );
	color: var( --tag-pill-yellow-text );
}
/* ... */

